<resources>
    <!-- General App -->
    <string name="app_name">Nathan Access</string>

    <!-- Login activity -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"WELCOME"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="kaps_logo">Kaps logo</string>

    <!-- Search activity -->
    <string name="start_date">Select start date</string>
    <string name="end_date">Select end date</string>
    <string name="select">SELECT DATA TYPE</string>
    <string name="search_button">FIND</string>
    <string-array name="data_types">
        <item>Validation</item>
        <item>Cash Movements</item>
        <item>Vehicle Movements</item>
    </string-array>

    <!-- Data display activity -->
    <string name="code_label">CODE</string>
    <string name="date_label">Payment Date/Time</string>
    <string name="balance_label">Balance</string>
    <string name="collected_label">Collected</string>
    <string name="due_label">Amount Due</string>

</resources>
